# Ticket-Booking-System-Project-PASSLINE-

./: README.md
backend/: pyproject.toml  requirements.txt  seed.py
backend/app/: __init__.py  config.py
backend/app/models/: __init__.py  booking.py  event.py  organizer.py  user.py
backend/app/routes/: auth.py  events.py  moderator.py
backend/instance/: passline.db
backend/migrations/versions/: d4384408f304_initial_schema.py
frontend/: file.txt
frontend/src/: App.jsx
frontend/src/pages/: Events.jsx  Login.jsx
