[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.3",
    "flask>=3.1.3",
    "flask-jwt-extended>=4.7.4",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "redis>=8.0.1",
    "werkzeug>=3.1.8",
]
